Update style.css colors

--- a/style.css
+++ b/style.css
@@ -2,9 +2,6 @@
 This is my Websites styling data
 */
 body {
-  background-color: #000000;
-}
-
-h1 {
-color: #5bc1e4;
+  background-color: #062846;
+  color: #ECB053;
 }
