--- a/style.css
+++ b/style.css
@@ -1,7 +1,48 @@
 /*
 This is my Websites styling data
 */
+html{
+  scroll-behavior: smooth;
+}
+
+
 body {
-  background-color: #062846;
-  color: #ECB053;
+  background-color: #052038;
+  color: #f1ae48;
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 140%;margin-left: 6%;
+  margin-inline: 15%;
+}
+
+main,header,footer{
+  background-color: #0f2c46;
+}
+
+li{;
+margin-inline: 20%;
+margin-bottom: 2%;
+}
+
+p{
+  margin-inline: 10%;
+}
+
+h1,h2,h3,h4,h5,h6{
+  text-decoration-thickness: 200%;
+  color: #f5b24f;
+}
+
+code{
+  background-color: #314457;
+  color: rgb(194, 176, 144);
+}
+
+/*Anchors (links) styles*/
+a {
+      color:#ffcc88;
+}
+a:hover{
+  color:#66c5e2;
+
 }
